--- a/src/client/public/stylesheets/components/navbar.scss
+++ b/src/client/public/stylesheets/components/navbar.scss
@@ -1,11 +1,10 @@
 .navbar {
-  z-index: 1;
+  z-index: 4;
   position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // background: inherit;
   max-width: 1580px;
   padding-right: 20px;
 }
